increase z-index of nav to make sure it's above everything

--- a/src/components/Header.jsx/Header.scss
+++ b/src/components/Header.jsx/Header.scss
@@ -10,6 +10,7 @@
     border-bottom: 1px solid $neutral300;
     position: relative;
     font-family: cursive;
+    z-index: 1000;
 
     // &__logo {}
 
@@ -51,7 +52,7 @@
             border-radius: 0.5rem;
             border: 1px solid $neutral300;
             background-color: white;
-            
+
 
 
         }
